Closed Bug 379755 Opened 17 years ago Closed 17 years ago

JAWS does not read "Bookmarks" or "History" when sidebar opens

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(1 file)

When hitting Ctrl+B or Ctrl+H JAWS simply reads the name of the edit box "Search". 

There is a parent accesible of ROLE_PANE with the name "History" or "Bookmarks", which we want JAWS to read.

JAWS will read an ancestor accessible when it is ROLE_GROUPING, but not ROLE_PANE.
Attachment #263757 - Flags: review?(david.bolter)
Comment on attachment 263757 [details] [diff] [review]
A harmless hack -- map PANE to GROUPING

Nice patch. I like the semantics of ROLE_SYSTEM_GROUPING a lot better anyways.
Attachment #263757 - Flags: review?(david.bolter) → review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: