bug 379755. JAWS does not read Bookmarks or History when sidebar opens. r=david.bolter